tests/baselines/reference/typeValueConflict2.errors.txt
tests/cases/compiler/typeValueConflict2.ts(10,24): error TS2339: Property 'A' does not exist on type 'number'.


==== tests/cases/compiler/typeValueConflict2.ts (1 errors) ====
    module M1 {
        export class A<T> {
            constructor(a: T) {
            }
        }
    }
    module M2 {
        var M1 = 0;
        // Should error.  M1 should bind to the variable, not to the module.
        class B extends M1.A<string> {
                           ~
!!! error TS2339: Property 'A' does not exist on type 'number'.
        }
    }
    module M3 {
        // Shouldn't error
        class B extends M1.A<string> {
        }
    }
    